--- a/app/backend/.env
+++ b/app/backend/.env
@@ -4,3 +4,11 @@ DATABASE_USER=postgres
 DATABASE_PASSWORD="123"
 DATABASE_PORT=5432
 APP_NAME="Gen App"
+
+
+# DATABASE_HOST=dpg-cq8i9h6ehbks738krnf0-a
+# DATABASE_NAME=ask-docs
+# DATABASE_USER=ask_docs_user
+# DATABASE_PASSWORD=Yentkb3qTQ6G9MX2waEOiBwdgbaZfFqZ
+# DATABASE_PORT=5432
+# APP_NAME="Gen App"
