be: added docker image

--- a/app/backend/alembic.ini
+++ b/app/backend/alembic.ini
@@ -60,8 +60,8 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://ask_docs_user:Yentkb3qTQ6G9MX2waEOiBwdgbaZfFqZ@dpg-cq8i9h6ehbks738krnf0-a.oregon-postgres.render.com/ask_docs
-# sqlalchemy.url = postgresql://postgres:123@localhost:5432/gen-db
+# sqlalchemy.url = postgresql://ask_docs_user:Yentkb3qTQ6G9MX2waEOiBwdgbaZfFqZ@dpg-cq8i9h6ehbks738krnf0-a.oregon-postgres.render.com/ask_docs
+sqlalchemy.url = postgresql://postgres:123@localhost:5432/gen-db
 # hon functions that are run
 # on newly generated revision scripts.  See the documentation for further
 # detail and examples
