--- a/app/backend/.env
+++ b/app/backend/.env
@@ -5,10 +5,10 @@ DATABASE_PASSWORD="123"
 DATABASE_PORT=5432
 APP_NAME="Gen App"
 
-AWS_KEY=AKIASRNOLMWALGAUX55N
-AWS_SECRET=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
-AWS_S3_BUCKET=ask-docs-public-bucket
-AWS_REGION=us-west-2
+# AWS_KEY=AKIASRNOLMWALGAUX55N
+# AWS_SECRET=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
+# AWS_S3_BUCKET=ask-docs-public-bucket
+# AWS_REGION=us-west-2
 
 
 # DATABASE_HOST=dpg-cq8i9h6ehbks738krnf0-a
